src/objects/auCriteria__c.object
<CustomObject>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>終了</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>開始</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>auCriteria_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>クライテリア</label>
    <nameField>
        <label>クライテリア名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>